--- a/docker/.env.example
+++ b/docker/.env.example
@@ -6,14 +6,26 @@
 # ===================
 # Domain Configuration
 # ===================
+# Your full site URL (used for auth callbacks, links)
 SITE_URL=https://events.yourdomain.com
 SITE_DOMAIN=events.yourdomain.com
 ACME_EMAIL=admin@yourdomain.com
 
 # ===================
-# Database
+# Database (PostgreSQL)
 # ===================
 POSTGRES_PASSWORD=your_secure_database_password_here
+# This is constructed automatically in docker-compose, but can be overridden:
+# DATABASE_URL=postgres://postgres:YOUR_PASSWORD@db:5432/common_events
+
+# ===================
+# Supabase Client Configuration
+# ===================
+# These point the @supabase/supabase-js client to YOUR self-hosted GoTrue
+# NEXT_PUBLIC_SUPABASE_URL = your public domain (where GoTrue is accessible)
+NEXT_PUBLIC_SUPABASE_URL=https://events.yourdomain.com
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 
 # ===================
 # GoTrue Authentication
@@ -21,8 +33,7 @@ POSTGRES_PASSWORD=your_secure_database_password_here
 # Generate with: openssl rand -base64 32
 JWT_SECRET=your_jwt_secret_minimum_32_characters_here
 
-# These keys are used by the Supabase client library
-# Generate anon key: https://supabase.com/docs/guides/self-hosting#api-keys
+# Supabase-compatible keys (same as above, used by docker-compose for GoTrue)
 ANON_KEY=your_anon_key_here
 SERVICE_ROLE_KEY=your_service_role_key_here
 
@@ -31,11 +42,17 @@ SERVICE_ROLE_KEY=your_service_role_key_here
 # ===================
 MINIO_ROOT_USER=minio_admin
 MINIO_ROOT_PASSWORD=your_secure_minio_password_here
+# Internal endpoint (used by app to connect to MinIO)
+MINIO_ENDPOINT=http://minio:9000
+MINIO_ACCESS_KEY=minio_admin
+MINIO_SECRET_KEY=your_secure_minio_password_here
+# Public URL for serving images (goes through Caddy)
+NEXT_PUBLIC_STORAGE_URL=https://events.yourdomain.com/storage/event-banners
 
 # ===================
 # SMTP (for auth emails)
 # ===================
-# Options: Resend, SendGrid, Mailgun, Amazon SES, etc.
+# Use Hetzner mail, Resend, SendGrid, Mailgun, etc.
 SMTP_HOST=smtp.resend.com
 SMTP_PORT=587
 SMTP_USER=resend
@@ -51,11 +68,18 @@ CSRF_SECRET=your_csrf_secret_here
 # ===================
 # Google Maps
 # ===================
-GOOGLE_MAPS_API_KEY=your_google_maps_api_key
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
 
 # ===================
 # Web Push Notifications (VAPID keys)
 # ===================
 # Generate with: npx web-push generate-vapid-keys
-VAPID_PUBLIC_KEY=your_vapid_public_key
+NEXT_PUBLIC_VAPID_PUBLIC_KEY=your_vapid_public_key
 VAPID_PRIVATE_KEY=your_vapid_private_key
+
+# ===================
+# Optional: Cron Jobs
+# ===================
+# Secret for authenticating cron job endpoints (e.g., reminder notifications)
+# Generate with: openssl rand -hex 16
+CRON_SECRET=your_cron_secret_here
