--- a/docker/Caddyfile
+++ b/docker/Caddyfile
@@ -25,6 +25,7 @@
 
 	# GoTrue auth endpoints - proxy to auth service
 	handle /auth/* {
+		uri strip_prefix /auth
 		reverse_proxy gotrue:9999
 	}
 
