--- a/docker/Caddyfile
+++ b/docker/Caddyfile
@@ -23,6 +23,12 @@
 		-Server
 	}
 
+	# PostgREST data endpoints
+	handle /rest/v1/* {
+		uri strip_prefix /rest/v1
+		reverse_proxy rest:3000
+	}
+
 	# GoTrue auth endpoints - proxy to auth service
 	handle /auth/v1/* {
 		uri strip_prefix /auth/v1
