--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -59,6 +59,25 @@ services:
     networks:
       - internal
 
+  # PostgREST - Data API (required for Supabase client)
+  rest:
+    image: postgrest/postgrest:v12.0.2
+    container_name: common-events-rest
+    restart: unless-stopped
+    depends_on:
+      db:
+        condition: service_healthy
+    environment:
+      PGRST_DB_URI: postgres://postgres:${POSTGRES_PASSWORD}@db:5432/common_events
+      PGRST_DB_SCHEMAS: "public"
+      PGRST_DB_ANON_ROLE: "anon"
+      PGRST_JWT_SECRET: ${JWT_SECRET}
+      PGRST_SERVER_PORT: "3000"
+    ports:
+      - "127.0.0.1:3001:3000"
+    networks:
+      - internal
+
   # MinIO - S3-compatible object storage
   minio:
     image: minio/minio:latest
