--- a/docker/.env.example
+++ b/docker/.env.example
@@ -66,6 +66,14 @@ SMTP_ADMIN_EMAIL=noreply@yourdomain.com
 CSRF_SECRET=your_csrf_secret_here
 
 # ===================
+# Supabase Studio (Admin Panel)
+# ===================
+# Dashboard login credentials for https://yourdomain.com/studio/
+# Password must contain at least one letter (not just numbers)
+DASHBOARD_USERNAME=admin
+DASHBOARD_PASSWORD=YourSecureAdminPassword123!
+
+# ===================
 # Google Maps
 # ===================
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
