--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -203,9 +203,9 @@ services:
       CSRF_SECRET: ${CSRF_SECRET}
       CRON_SECRET: ${CRON_SECRET}
       # Google Maps
-      NEXT_PUBLIC_GOOGLE_MAPS_API_KEY: ${GOOGLE_MAPS_API_KEY}
+      NEXT_PUBLIC_GOOGLE_MAPS_API_KEY: ${NEXT_PUBLIC_GOOGLE_MAPS_API_KEY}
       # VAPID Push Notifications
-      NEXT_PUBLIC_VAPID_PUBLIC_KEY: ${VAPID_PUBLIC_KEY}
+      NEXT_PUBLIC_VAPID_PUBLIC_KEY: ${NEXT_PUBLIC_VAPID_PUBLIC_KEY}
       VAPID_PRIVATE_KEY: ${VAPID_PRIVATE_KEY}
       # Site URL for calendar/links
       NEXT_PUBLIC_SITE_URL: ${SITE_URL}
