--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       GOTRUE_SMTP_USER: ${SMTP_USER}
       GOTRUE_SMTP_PASS: ${SMTP_PASS}
       GOTRUE_SMTP_ADMIN_EMAIL: ${SMTP_ADMIN_EMAIL}
+      GOTRUE_MAILER_SECURE_CONN: "true"
       GOTRUE_MAILER_URLPATHS_CONFIRMATION: /auth/confirm
       GOTRUE_MAILER_URLPATHS_RECOVERY: /auth/reset-password
       GOTRUE_MAILER_URLPATHS_INVITE: /auth/invite
