--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -48,9 +48,9 @@ services:
       GOTRUE_SMTP_PASS: ${SMTP_PASS}
       GOTRUE_SMTP_ADMIN_EMAIL: ${SMTP_ADMIN_EMAIL}
       GOTRUE_MAILER_SECURE_CONN: "true"
-      GOTRUE_MAILER_URLPATHS_CONFIRMATION: /auth/confirm
-      GOTRUE_MAILER_URLPATHS_RECOVERY: /auth/reset-password
-      GOTRUE_MAILER_URLPATHS_INVITE: /auth/invite
+      GOTRUE_MAILER_URLPATHS_CONFIRMATION: /auth/v1/verify
+      GOTRUE_MAILER_URLPATHS_RECOVERY: /auth/v1/verify
+      GOTRUE_MAILER_URLPATHS_INVITE: /auth/v1/verify
       GOTRUE_DISABLE_SIGNUP: "false"
       API_EXTERNAL_URL: ${SITE_URL}
       GOTRUE_API_HOST: 0.0.0.0
